clusters/homelab/apps/anki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anki
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
