clusters/homelab/apps/anki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anki
  namespace: anki
  labels:
    app: anki
spec:
  selector:
    app: anki
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
      name: http
  type: ClusterIP
