clusters/homelab/apps/anki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anki
  namespace: anki
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - anki.tkuipers.ca
      secretName: anki-tkuipers-ca-tls
  rules:
    - host: anki.tkuipers.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anki
                port:
                  number: 8084
